feat: Api filter metadata routes
